deployments/gateway/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: canary-playground
  labels:
    app: envoy-gateway

data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_http
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 80
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    access_log:
                      - name: envoy.access_loggers.stdout
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: service-a-virtual-host
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/service-b"
                              route:
                                cluster: service_b
                                prefix_rewrite: "/"
                                timeout: 2s
                            - match:
                                prefix: "/"
                              route:
                                weighted_clusters:
                                  clusters:
                                    - name: service_a_v1
                                      weight: 90
                                    - name: service_a_v2
                                      weight: 10
                                timeout: 2s
                    http_filters:
                      - name: envoy.filters.http.router
    clusters:
      - name: service_a_v1
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: service_a_v1
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: service-a-v1.canary-playground.svc.cluster.local
                        port_value: 80
      - name: service_a_v2
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: service_a_v2
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: service-a-v2.canary-playground.svc.cluster.local
                        port_value: 80
      - name: service_b
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: service_b
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: service-b.canary-playground.svc.cluster.local
                        port_value: 80
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
